# sfml-cmake-example

./: CMakeLists.txt  README.md  build.bat  configure.bat  main.cpp  run.bat
